@@ -85,3 +85,4 @@
   - added SRC_REGEXP system variable
   - create reproducible output (always order hashes in templates)
   - use "grohtml" for man page conversion (in FileWiki::Plugin::Man)
+  - produce "name.1.html" instead of "name.html" (FileWiki::Plugin::Man)
